# rust-file-upload-workshop-4

./: Cargo.toml
src/: main.rs
src/app/constants/: index.rs
src/app/models/: user.rs
src/app/modules/user/: index.rs
src/routes/: index.rs
